# AcousticSimulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  Instructions.txt  LICENSE.md  README.md  prepare_dist.ps1
ComputeEngine/: BlockStorage.cpp  BlockStorage.h  CMakeLists.txt  DataStore.cpp  DataStore.h  JSONConvert.cpp  JSONConvert.h  SimulationParameter.cpp  SimulationParameter.h  Simulator.cpp  Simulator.h  SourceConfig.h  Transducer.cpp  Transducer.h  Vec3.cpp  Vec3.h  main.cpp
ComputeEngine/Computation/: BlockStorage.h  Config.cpp  Config.h  LegacyBlockStorage.h  Simulator.cpp  Simulator.h  Vec3.cpp  Vec3.h
ComputeEngine/UserInterface/: BenchmarkingWidget.cpp  MenuBar.cpp  RunSimulationWidget.cpp  SetupStyle.cpp  SimulationControlWidget.cpp  TransducerConfigurationWidget.cpp  UserInterface.h
ComputeEngine/Utilities/: AtomicLogger.cpp  AtomicLogger.h  DataStore.cpp  DataStore.h
ComputeEngine/Widgets/: Colors.h  SetupStyle.cpp  SetupStyle.h  SimulationConfig.cpp  SimulationRunner.cpp  TransducerConfig.cpp  TransducerLoader.cpp  TransducerLoader.h  Widgets.h
ComputeEngineTests/: CMakeLists.txt  testtest.cpp
TransducerConfigurator/: .gitignore  package-lock.json  package.json  rollup.config.js
TransducerConfigurator/public/: TransducerConfigurator.html
TransducerConfigurator/public/static/: global.css
TransducerConfigurator/src/: helpControl.svelte  jquery-globals.js  main.js  rendererControl.svelte  simulationControl.svelte  store.js  transducersControl.svelte  utils.js
cmake/: Cache.cmake  ClangClWorkaround.cmake  CompilerWarnings.cmake  Doxygen.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  pmm.cmake  ucm.cmake
core/: Cargo.toml
core/src/: computations.rs  events_server.rs  main.rs
core/web/: index.html
interface/: package-lock.json  rollup.config.js
interface/public/: index.html
interface/src/: helpControl.svelte  main.js  rendererControl.svelte  simulationControl.svelte  store.js  transducersControl.svelte  utils.js
legacy/interface/: package.json
legacy/interface/public/: global.css  goldenlayout.css
legacy/interface/src/: app.svelte  simulationControl.svelte  store.js  transducersControl.svelte  utils.js
legacy/src/: computations.rs  data_structures.rs  main.rs
src/: computations.rs  data_structures.rs
