[package]
name = "core"
version = "0.1.0"
authors = ["Jirawut Thongraar <jirawut_t@kvis.ac.th>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "0.2.6", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
futures = "0.3.1"
env_logger = "0.5"
bytes = "0.5"
open = "1.3.2"
rand = "0.7.2"
approx = "0.3.2"
GSL = { version = "1.1.0", features = ["v2"] }
rayon = "1.3.0"

actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
# actix-broker = "0.2.1"
# ws = "0.9.1"
